search bar width fixed on mobile

--- a/my-style.css
+++ b/my-style.css
@@ -31,7 +31,7 @@ form {
     padding: 10px;
     border-radius: 20px;
     border: 1px solid #d6d6d6;
-    width: 60vh;
+    width: 60%;
     outline: none;
 }
 #search:focus {
